namespace Rogue
{
    internal class Program
    {
        static void Main(string[] args)
        {
            Console.WriteLine("There will be the game (pretty soon)");
        }
    }
}
