@startuml
' ============================
' Interfaces
' ============================
interface IItem {
  +Name : string {readOnly}
  +GetDisplayName() : string
  +CanEquip : bool {readOnly}
  +TwoHanded : bool {readOnly}
  +Equip(player : Player)
  +Unequip(player : Player)
}

interface IEquipment {
  +ModifyDamage(buffOrNerf : int)
  +ModifyArmor(buffOrNerf : int)
}

interface IWeapon {
  +Damage : int {readOnly}
}

interface IShield {
  +Armor : int {readOnly}
  +ParryDamage : int {readOnly}
  +MilliSecondsToParry : int {readOnly}
}

' ============================
' Abstract Classes and Base Items
' ============================
abstract class Item {
  - Name : string
  +GetDisplayName() : string
  +CanEquip() : bool
  +TwoHanded() : bool
  +Equip(player : Player)
  +Unequip(player : Player)
}

abstract class Equipment extends Item implements IEquipment {
  +Equip(player : Player)
  +Unequip(player : Player)
  +ModifyDamage(buffOrNerf : int)
  +ModifyArmor(buffOrNerf : int)
}

' ============================
' Decorator for Equipment
' ============================
abstract class EquipmentDecorator extends Equipment {
  - wrappedEquipment : Equipment
  +EquipmentDecorator(equipmentToWrap : Equipment)
  +GetDisplayName() : string
  +Equip(player : Player)
  +Unequip(player : Player)
  +ModifyDamage(buffOrNerf : int)
  +ModifyArmor(buffOrNerf : int)
  +TwoHanded() : bool
}

' ----------------------------
' Concrete Decorators
' ----------------------------
class LegendaryEffect extends EquipmentDecorator {
  +LegendaryEffect(equipmentToWrap : Equipment)
  +GetDisplayName() : string
  +Equip(player : Player)
  +Unequip(player : Player)
}

class PowerfulEffect extends EquipmentDecorator {
  +PowerfulEffect(equipmentToWrap : Equipment)
  +GetDisplayName() : string
  +Equip(player : Player)
}

class ProtectiveEffect extends EquipmentDecorator {
  +ProtectiveEffect(equipmentToWrap : Equipment)
  +GetDisplayName() : string
  +Equip(player : Player)
}

class UnluckyEffect extends EquipmentDecorator {
  +UnluckyEffect(equipmentToWrap : Equipment)
  +GetDisplayName() : string
  +Equip(player : Player)
  +Unequip(player : Player)
}

' ============================
' Weapons Hierarchy
' ============================
abstract class Weapon extends Equipment implements IWeapon {
  - Damage : int
  +Damage() : int
  +ModifyDamage(buffOrNerf : int)
  +TwoHanded() : bool
}

abstract class TwoHandedWeapon extends Weapon {
  +TwoHanded() : bool
}

class Mace extends TwoHandedWeapon {
  +Mace(name : string, damage : int)
}

class Bow extends Weapon {
  - PiercingStrength : int
  - DistanceOfAttack : int
  +Bow(name : string, damage : int, pierce : int, distance : int)
}

class MagicStaff extends Weapon {
  - ManaUsage : int
  - SplashDamage : bool
  - DistanceOfAttack : int
  +MagicStaff(name : string, damage : int, manaUsage : int, splashDmg : bool, distance : int)
}

class Sword extends Weapon {
  +Sword(name : string, damage : int)
}

' ============================
' Shield
' ============================
class Shield extends Equipment implements IShield {
  - Armor : int
  - ParryDamage : int
  - MilliSecondsToParry : int
  +Shield(armor : int, parryDmg : int, timeParry : int)
}

' ============================
' Currency
' ============================
enum CurrencyType {
  Coin
  Gold
}

class Currency extends Item {
  - Value : int
  - Type : CurrencyType
  +Currency(type : CurrencyType, value : int)
  +GetDisplayName() : string
}

' ============================
' Unusable Items
' ============================
class UnusableItem extends Item {
  - ShortDescription : string
  +UnusableItem(name : string, desc : string)
  +GetDisplayName() : string
  +GetDisplayDescription() : string
}

class Rubbish extends UnusableItem {
  +Rubbish(name : string = "Rubbish", desc : string = "It's stinks. And you too now.")
}

class MysteriousNote extends UnusableItem {
  - PartOfLore : string
  +MysteriousNote(name : string, shortDesc : string, lorePart : string)
}

class Egg extends UnusableItem {
  +Egg(name : string = "EASTER EGG", desc : string = "???")
}

' ============================
' Core Game Elements
' ============================
class Cell {
  - IsWall : bool
  - Items : Stack<Item>
  - IsPlayerHere : bool
  +GetDisplayCell() : char
}

class Room {
  - Grid : Cell[20,40]
  - PlayerPosition : (int, int)
  +Room()
  +Render()
  +RemoveTopItemAt(row_Y : int, col_X : int) : Item?
  +ReceiveDropItem(row_Y : int, col_X : int, dropItem : Item)
}

class Inventory {
  - Items : List<Item>
  - Capacity : int
  +Inventory(currentCapacity : int = 7)
  +AddItem(pickup : Item) : bool
  +LayOutOfInventoryAt(index : int) : Item?
}

class Player {
  - Strength : int
  - Dexterity : int
  - Health : int
  - Luck : int
  - Aggression : int
  - Wisdom : int
  - Inventory : Inventory
  - Hands : Item?[2]
  +Player()
  +Move()  ' TODO: implement movement
  +PickupItem(currentRoom : Room) : bool
  +DropItem(inventoryIndex : int, currentRoom : Room) : bool
  +Equip(inventoryIndex : int, handNumber : int) : bool
  +Unequip(handNumber : int, currentRoom : Room) : bool
}

class Program {
  +Main(args : string[])
}

' ============================
' Relationships
' ============================
IItem <|.. Item
IEquipment <|.. Equipment
EquipmentDecorator ..> Equipment : "wraps"

Item <|-- Equipment
Equipment <|-- Weapon
Weapon <|-- TwoHandedWeapon
TwoHandedWeapon <|-- Mace
Weapon <|-- Bow
Weapon <|-- MagicStaff
Weapon <|-- Sword

Equipment <|-- Shield

Item <|-- Currency
Item <|-- UnusableItem
UnusableItem <|-- Rubbish
UnusableItem <|-- MysteriousNote
UnusableItem <|-- Egg

Player "1" -- "1" Inventory : has
Room "1" -- "*" Cell : contains
Cell "1" -- "*" Item : holds

Program ..> Room : "creates/uses"
Program ..> Player : "creates/uses"

@enduml
